--- a/login.html
+++ b/login.html
@@ -6,48 +6,41 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
-  <title>eMercado - Todo lo que busques está aquí</title>
-
+  <title>Google Sing In</title>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <meta name="google-signin-client_id" content="220496166273-6so7k1cnstua3ck0nm4112bt6qt6r94t.apps.googleusercontent.com">
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
-  <style>
-    html, body{
-      height: 100%;
-    }
-
-    body {
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-align: center;
-      align-items: center;
-      padding-top: 40px;
-      padding-bottom: 40px;
-      background-color: #f5f5f5;
-    }
-
-    .signin {
-      width: 100%;
-      max-width: 330px;
-      padding: 15px;
-      margin: auto;
-    }
-  </style>
-</head>
-
-<body class="text-center">
-  <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 1 (Fecha de entrega: 16/08/2020) -> Punto 3 y 4.</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
-    </div>
-  </div>
-
   <script src="js/init.js"></script>
   <script src="js/login.js"></script>
+  <style>
+    .g-signin2 {
+      margin-left: 500px;
+      margin-top: 200px;
+    }
+    .data {
+      display: none;
+    }
+  </style>
+
+  <!-- only working with url localhost -->
+</head>
+<body>
+  <div class="g-signin2" data-onsucces="onSignIn"></div>  
+  <div class="data"> 
+    <p>Profile Details
+      <img id="pic" class="img-circle" width="100" height="100">
+      <p>Email Address</p>
+      <p id="email" class="alert alert-danger"></p>
+      <button onclick="signOut()" class="btn btn-danger">SingOut</button>
+
+    </p>
+  </div>
 </body>
 </html>
