--- a/cart.html
+++ b/cart.html
@@ -36,12 +36,13 @@
 <body>
   <nav class="site-header sticky-top py-1 bg-dark">
     <div class="container d-flex flex-column flex-md-row justify-content-between">
-      <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
+      <a class="py-2 d-none d-md-inline-block" href="main.html">Inicio</a>
       <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
       <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-      <a class="py-2 d-none d-md-inline-block" href="login.html">Login</a>
+      <p id="usercontainer" style="color:white"  class="py-2 d-none d-md-inline-block" href="login.html"></p>
+      <a class="py-2 d-none d-md-inline-block" id="logout" href="logout">Salir</a>
     </div>
   </nav>
   <div class="container p-5">
