--- a/products.html
+++ b/products.html
@@ -17,12 +17,13 @@
   <body>
     <nav class="site-header sticky-top py-1 bg-dark">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
-        <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
+        <a class="py-2 d-none d-md-inline-block" href="main.html">Inicio</a>
         <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-        <a class="py-2 d-none d-md-inline-block" href="login.html">Login</a>
+        <p id="usercontainer" style="color:white"  class="py-2 d-none d-md-inline-block" href="login.html"></p>
+        <a class="py-2 d-none d-md-inline-block" id="logout" href="logout">Salir</a>
       </div>
     </nav>
     <main role="main" class="pb-5">
@@ -46,10 +47,13 @@
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-end">
+            <div class="">
               <div class="col-md-6"></div>
                 <div class="col-md-6 col-sm-12 mb-1 container">
-                  <div class="row container p-0 m-0">
+                  <div class="row container p-0 m-0 row d-flex justify-content-between">
+                    <div class="col">
+                      <input class="form-control" type="text" placeholder="buscador" id="filterbox">
+                    </div>
                     <div class="col">
                       <p class="font-weight-normal text-right my-2">Cant.</p>
                     </div>
